sdk_tests/tests/pbc_contract_codegen/fail/zk/missing_init_for_zk_on_secret_input.stderr
error[E0425]: cannot find value `__PBC_IS_ZK_CONTRACT` in this scope
 --> tests/pbc_contract_codegen/fail/zk/missing_init_for_zk_on_secret_input.rs:6:1
  |
6 | #[zk_on_secret_input(shortname = 0x04)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)
